# ot-miinaharava

./: .coveragerc  .env  .env.test  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: arkkitehtuuri.md  teht_1_monopoli.md  teht_2_monopoli.md  teht_3_code.py  teht_3_sekvenssikaavio.md  teht_4.md  teht_4_code.py
src/: board.py  build.py  config.py  database_connection.py  index.py  init_database.py  minesweeper.py  ui.py
src/entity/: result.py
src/game/: board.py  minesweeper.py
src/repository/: result_repository.py
src/service/: result_service.py
src/sprites/: adjacent.py  adjecent.py  empty.py  flag.py  mine.py  number.py  unopened.py  unrevealed.py
src/tests/: board_test.py  minesweeper_test.py  result_repository_test.py  result_service_test.py  sprites_test.py
src/ui/: ui.py
